2014-04-29  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide.xml: move from DocBook V3.1 to V4.2 and fix various XML
      tag errors. No content change.
    * gw/Makefile.in, Makefile.in: automake generated files.
    * Makefile.am: add $(XML_DCL) reference to the xml.dcl file.
    * configure[.in]: we need the xml.dcl to be added to the jade execution
      to have a clean XML tag declaration, since we are in SGML mode here.
      
2014-04-18 Rene Kluwen <rene.kluwen at chimit.nl>
    Fixed memory leak, hopefully for good.
    Added fix for dlr_add to use extra parameter use_dst.

2013-11-12 Rene Kluwen <rene.kluwen at chimit.nl>
    Patch by Juno Lopez that allows for segmented reading of pdus
    when they are split over different tcp packets under high load.

2013-09-01 Rene Kluwen <rene.kluwen at chimit.nl>
    Fixed a small bug in the routing-upon-receiver number where opensmppbox would crash at boot-time
    if the particular config section is not defined.

2013-08-08 Rene Kluwen <rene.kluwen at chimit.nl>
    Patch provided by Alexander Kovalenko <alexander.kovalenko at ardas.dp.ua>. The generated smpp message id
    is now more than 8 characters in case of smpp version > 3.3.

2013-07-10 Rene Kluwen <rene.kluwen at chimit.nl>
    Patch provided by Kelvin Porter Kelvin.Porterat h3net.com. Allows routing to smsc based upon receiver number.

2012-12-18 Rene Kluwen <rene.kluwen at chimit.nl>
    Another patch by Victor Luchitz. Multi-part messages now have an smpp message-id of their own.
    This is in stead of the message id that first used to be the one of the first message-part.

2012-12-11 Rene Kluwen <rene.kluwen at chimit.nl>
        Reverted back to v63 due to too many bugs and problems in these sources.
        At the same time, introducing a new ESME-to-MT routing possibility. See documentation about 'smsc-route'.
        Patch provided by Victor Luchitz.